--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,15 @@
 
-<mat-toolbar  color="primary" class="mat-elevation-z6">
+<mat-toolbar color="accent" class="mat-elevation-z6">
 
-  <a mat-button routerLink="/">
+  <a class="navigation-item" mat-button routerLink="/">
     <span>COURSES</span>
   </a>
 
-  <a mat-button routerLink="/about">
+  <a class="navigation-item" mat-button routerLink="/magic-todos">
+    <span>MAGIC TODOS</span>
+  </a>
+
+  <a class="navigation-item" mat-button routerLink="/about">
     <span>ABOUT</span>
   </a>
 
