--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,7 +3,7 @@
 
   <h1>Welcome!</h1>
 
-  <p>Welcome to the Angular Testing Course</p>
+  <p>Welcome to the new era of testing</p>
 
   <img class="course-logo" class="course-image mat-elevation-z10"
        src="https://s3-us-west-1.amazonaws.com/angular-university/course-images/angular-testing-small.png">
